# salvo_t

./: Cargo.toml  README.md
macros/: Cargo.toml
macros/src/: extract.rs  handler.rs  lib.rs  shared.rs
src/: addr.rs  catcher.rs  cfg.rs  depot.rs  error.rs  handler.rs  lib.rs  main.rs  server.rs  service.rs  transport.rs
src/extract/: metadata.rs  mod.rs
src/http/: form.rs  mod.rs  range.rs  request.rs  response.rs
src/http/errors/: mod.rs  parse_error.rs  status_error.rs
src/listener/: mod.rs
src/routing/: mod.rs  router.rs
src/routing/filter/: mod.rs  opts.rs  others.rs  path.rs
src/serde/: mod.rs  request.rs
src/test/: client.rs  mod.rs  response.rs
src/test/request/: builder.rs  mod.rs
src/writer/: json.rs  mod.rs  redirect.rs  text.rs
text_diff/: Cargo.toml  file.txt
text_diff/src/: main.rs
worklog/: Part01.md  Part02.md  Part03.md  Part04.md  Part05.md  Part06.md  Part07.md  Part08.md  Part09.md  Part10.md  Part11.md  Part12.md  Part13.md
