[package]
name = "salvo_t"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
async-trait = "0.1.58"
cookie = { version = "0.16.1", features = ["percent-encode"] }
form_urlencoded = "1.1.0"
hyper = { version = "0.14", features = ["stream", "server", "http1", "http2", "tcp", "client"] }
mime = "0.3.16"
multer = "2.0.4"
multimap = "0.8.3"
once_cell = "1.15.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = { version = "1.0.87", features = ["raw_value"] }
tempfile = "3.3.0"
textnonce = "1.0.0"
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "fs"] }
